# smart-home-iot

./: README.md  firebase.json  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/scripts/: seed.py
backend/src/: main.py
backend/src/auth/: dependencies.py  router.py  schemas.py  utils.py
backend/src/core/: alert_bus.py  config.py  database.py  event_bus.py  fire_alert.py  gateway.py  mqtt.py
backend/src/devices/: router.py  schemas.py
backend/src/feeds/: router.py  schemas.py
backend/src/gateway/: __init__.py  router.py
backend/src/models/: device.py  sensor_reading.py  user.py
backend/src/sensors/: router.py
backend/src/users/: router.py  schemas.py
docs/: API.md
frontend/: .firebaserc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  devices.ts  feeds.ts  gateway.ts  sensors.ts  users.ts
frontend/src/components/: FireAlertModal.tsx  Layout.tsx
frontend/src/hooks/: useFireAlert.ts  useSensorStream.ts
frontend/src/pages/: DashboardPage.tsx  DevicesPage.tsx  FeedsPage.tsx  LoginPage.tsx  SensorsPage.tsx  UsersPage.tsx
frontend/src/stores/: alertStore.ts  authStore.ts  sensorStore.ts
frontend/src/types/: index.ts
gateway/: .env.example  main.py  pyproject.toml
gateway/src/: main.py
shared_models/: schemas.py
